Extensions: Exclude _metadata folder from being packed.

This CL ensures that the reserved _metadata folder is not included in the packed
extension package. This should be safe as:
  - Webstore already disallows packages with a _metadata folder.
  - We already disallow loading unpacked extensions with non-reserved files in
    the _metadata folder (r502478).

This should help ensure that unpacked extensions using the Declarative Net
Request API don't have the indexed ruleset in the crx package.

BUG=858848

Change-Id: I6d175eae16457531a54818c2d801852dc41df8bc
Reviewed-on: https://chromium-review.googlesource.com/1132544
Commit-Queue: Karan Bhatia <karandeepb@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574071}
Former-commit-id: c6a6c3c302a6ebde30dafd7fb280ae31e8e7065a