extensions/browser/extension_creator_filter.cc
@@ -10,9 +10,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <set>
 #include <vector>
 
-#include "base/files/file_path.h"
 #include "base/macros.h"
 #include "build/build_config.h"
+#include "extensions/common/constants.h"
 
 #if defined(OS_WIN)
 #include <windows.h>
@@ -20,10 +20,21 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace extensions {
 
+ExtensionCreatorFilter::ExtensionCreatorFilter(
+    const base::FilePath& extension_dir)
+    : reserved_metadata_dir_(extension_dir.Append(kMetadataFolder)) {}
+
 bool ExtensionCreatorFilter::ShouldPackageFile(
     const base::FilePath& file_path) {
   const base::FilePath& base_name = file_path.BaseName();
   if (base_name.empty()) {
+    return false;
+  }
+
+  // Exclude the kMetadata folder which is reserved for use by the Extension
+  // system.
+  if (reserved_metadata_dir_ == file_path ||
+      reserved_metadata_dir_.IsParent(file_path)) {
     return false;
   }
 
