extensions/browser/extension_creator_filter.h
@@ -5,12 +5,9 @@
 #ifndef EXTENSIONS_BROWSER_EXTENSION_CREATOR_FILTER_H_
 #define EXTENSIONS_BROWSER_EXTENSION_CREATOR_FILTER_H_
 
+#include "base/files/file_path.h"
 #include "base/macros.h"
 #include "base/memory/ref_counted.h"
-
-namespace base {
-class FilePath;
-}
 
 namespace extensions {
 
@@ -18,15 +15,18 @@ namespace extensions {
 // Designed specifically to operate with the callback in chrome/common/zip.
 class ExtensionCreatorFilter : public base::RefCounted<ExtensionCreatorFilter> {
  public:
-  ExtensionCreatorFilter() {}
+  ExtensionCreatorFilter(const base::FilePath& extension_dir);
 
-  // Returns true if the given base::FilePath should be included in a
-  // packed extension.
+  // Returns true if the given |file_path| should be included in a packed
+  // extension.
   bool ShouldPackageFile(const base::FilePath& file_path);
 
  private:
   friend class base::RefCounted<ExtensionCreatorFilter>;
   ~ExtensionCreatorFilter() {}
+
+  const base::FilePath reserved_metadata_dir_;
+
   DISALLOW_COPY_AND_ASSIGN(ExtensionCreatorFilter);
 };
 
